hphp/hack/test/typecheck/inout/bad_inout_hint_typeconst1.php.exp
File "bad_inout_hint_typeconst1.php", line 7, characters 7-8:
Class C2 does not correctly implement all required members  (Typing[4184])
File "bad_inout_hint_typeconst1.php", line 7, characters 18-19:
Some members are incompatible with those declared in type C1
Read the following to see why:
File "bad_inout_hint_typeconst1.php", line 4, characters 23-23:
Unable to satisfy constraint on this type constant
File "bad_inout_hint_typeconst1.php", line 4, characters 44-46:
This is an inout parameter
File "bad_inout_hint_typeconst1.php", line 8, characters 28-30:
It is incompatible with a normal parameter
